# OpenGLEngine

./: .gitignore  CMakeLists.txt  OpenGLEngine.cpp  OpenGLEngine.sln  OpenGLEngine.vcxproj  OpenGLEngine.vcxproj.filters  OpenGL_project.bat  README.md
assets/materials/: slice.material.xml  ultrasound.material.xml
assets/pipelines/: forward.pipeline.xml  slice.pipeline.xml  ultrasound.pipeline.xml
assets/shaders/: combine.frag  depth_debug.frag  fullscreen.vert  mesh.frag  mesh.vert  present.frag  radial_blur.frag  shadow_depth.vert  slice_cube.frag
src/: App.cpp  App.h  FullscreenQuad.cpp  FullscreenQuad.h  Shader.cpp  Shader.h  main.cpp
src/Benchmark/: StressSettings.h
src/Debug/: LoggingConfig.h
src/Material/: Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h
src/Pipeline/: Pipeline.cpp  Pipeline.h  PipelineExecutor.cpp  PipelineExecutor.h  PipelineParser.cpp  PipelineParser.h
src/Profiling/: FrameProfiler.cpp  FrameProfiler.h  GpuTimer.cpp  GpuTimer.h  ScopedGpuDebugGroup.h
src/Renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  RenderEngine.cpp  RenderEngine.h  Texture2D.cpp  Texture2D.h  TextureFormat.cpp  TextureFormat.h
